--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -1,29 +1,37 @@
 # /etc/unbound/unbound.conf
 # to deploy use:
-# sudo install -m 0644 /home/julie/src/homelab/config/unbound/unbound.conf /etc/unbound/unbound.conf;sudo chown root:root /etc/unbound/unbound.conf
+# sudo install -m 0644 /home/julie/src/homelab/config/unbound/unbound.conf /etc/unbound/unbound.conf
+# sudo chown root:root /etc/unbound/unbound.conf
 # sudo unbound-checkconf /etc/unbound/unbound.conf
-# sudo systemctl enable unbound;sudo systemctl restart unbound;sudo systemctl status unbound;sudo journalctl -u unbound -f
-# Older version
-# sudo cp /home/julie/homelab/10.89.12.4/etc/unbound/unbound.conf /etc/unbound/;sudo chown root:root /etc/unbound/unbound.conf;sudo chmod 0644 /etc/unbound/unbound.conf;ls -l /etc/unbound/unbound.conf
-# sudo systemctl enable unbound;sudo systemctl restart unbound;sudo systemctl status unbound;sudo journalctl -u unbound -f
+# sudo systemctl enable unbound
+# sudo systemctl restart unbound
+# sudo systemctl status unbound
+# sudo journalctl -u unbound -f
+
 server:
 	username: "unbound"
 	pidfile: ""
 	do-daemonize: no
 
-	local-data: "derp.vpn.bardi.ch. A 127.0.0.1" # split-horizon override in the local resolver Unbound (for headscale DERP)
+	# Split-horizon override for Headscale DERP
+	local-data: "derp.vpn.bardi.ch. A 127.0.0.1"
 
-	module-config: "validator iterator"   # use "iterator" only if DNSSEC trust anchor fails
-	do-not-query-localhost: no            # Allow queries to localhost
+	module-config: "validator iterator"
+	do-not-query-localhost: no
 
 	auto-trust-anchor-file: "/var/lib/unbound/root.key"
 	root-hints: "/var/lib/unbound/root.hints"
 
-	# Listen on non-standard DNS port (dnsmasq owns 53)
+	# ------------------------------------------------------------
+	# Listener configuration (classic DNS only)
+	# ------------------------------------------------------------
 	interface-automatic: yes
 	port: 5335
 	do-ip6: yes
 
+	# ------------------------------------------------------------
+	# Access control
+	# ------------------------------------------------------------
 	access-control: 127.0.0.1/32 allow
 	access-control: ::1/128 allow
 	access-control: 127.0.0.0/8 allow
@@ -39,22 +47,26 @@ server:
 	access-control: fd10:6::/64 allow       # wg6 IPv6
 	access-control: fd10:7::/64 allow       # wg7 IPv6
 
-	do-ip6: yes
-
+	# ------------------------------------------------------------
+	# Performance tuning
+	# ------------------------------------------------------------
 	num-threads: 5
 	msg-cache-slabs: 8
 	rrset-cache-slabs: 8
 	infra-cache-slabs: 8
 	key-cache-slabs: 8
+
 	msg-cache-size: 256m
 	rrset-cache-size: 512m
 	key-cache-size: 128m
 	neg-cache-size: 4m
+
 	prefetch: yes
 	prefetch-key: yes
 	outgoing-range: 4096
 	num-queries-per-thread: 8192
 	serve-expired: yes
+
 	so-reuseport: yes
 	so-rcvbuf: 8m
 	so-sndbuf: 8m
@@ -65,33 +77,39 @@ server:
 
 	verbosity: 2
 
-# Authoritative-only resolution for bardi.ch via Infomaniak NS
+# ------------------------------------------------------------
+# Authoritative-only resolution for bardi.ch
+# ------------------------------------------------------------
 stub-zone:
 	name: "bardi.ch."
 	stub-host: ns11.infomaniak.ch
 	stub-host: ns12.infomaniak.ch
 
-# Default recursion fallback: global + local resolvers
-# comment for full-recursion
+# ------------------------------------------------------------
+# Recursive forwarding
+# ------------------------------------------------------------
 forward-zone:
 	name: "."
+
 	# Cloudflare
-	forward-addr: 1.1.1.1              # IPv4
-	forward-addr: 1.0.0.1              # IPv4 secondary
-	forward-addr: 2606:4700:4700::1111 # IPv6
-	forward-addr: 2606:4700:4700::1001 # IPv6 secondary
+	forward-addr: 1.1.1.1
+	forward-addr: 1.0.0.1
+	forward-addr: 2606:4700:4700::1111
+	forward-addr: 2606:4700:4700::1001
 
 	# Quad9
-	forward-addr: 9.9.9.9              # IPv4
-	forward-addr: 149.112.112.112      # IPv4 secondary
-	forward-addr: 2620:fe::fe          # IPv6
-	forward-addr: 2620:fe::9           # IPv6 secondary
+	forward-addr: 9.9.9.9
+	forward-addr: 149.112.112.112
+	forward-addr: 2620:fe::fe
+	forward-addr: 2620:fe::9
 
-	# Digitale Gesellschaft (Swiss privacy-focused resolver)
-	forward-addr: 185.95.218.42        # IPv4
-	forward-addr: 185.95.218.43        # IPv4 secondary
-	# IPv6 currently not published by them, so only IPv4 here
+	# Digitale Gesellschaft (CH)
+	forward-addr: 185.95.218.42
+	forward-addr: 185.95.218.43
 
+# ------------------------------------------------------------
+# Remote control
+# ------------------------------------------------------------
 remote-control:
 	control-enable: yes
 	control-interface: /run/unbound.ctl
