--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -9,111 +9,110 @@
 # sudo journalctl -u unbound -f
 
 server:
-	username: "unbound"
-	pidfile: ""
-	do-daemonize: no
+    interface: 127.0.0.1
+    interface: ::1
+    port: 5335
+    do-ip6: yes
+    prefer-ip6: yes
+    username: "unbound"
+    pidfile: ""
+    do-daemonize: no
 
-	# Split-horizon override for Headscale DERP
-	local-data: "derp.vpn.bardi.ch. A 127.0.0.1"
+    # Split-horizon override for Headscale DERP
+    local-data: "derp.vpn.bardi.ch. A 127.0.0.1"
 
-	module-config: "validator iterator"
-	do-not-query-localhost: no
+    module-config: "validator iterator"
+    do-not-query-localhost: no
 
-	auto-trust-anchor-file: "/var/lib/unbound/root.key"
-	root-hints: "/var/lib/unbound/root.hints"
+    auto-trust-anchor-file: "/var/lib/unbound/root.key"
+    val-permissive-mode: no
+    root-hints: "/var/lib/unbound/root.hints"
 
-	# ------------------------------------------------------------
-	# Listener configuration (classic DNS only)
-	# ------------------------------------------------------------
-	interface-automatic: yes
-	port: 5335
-	do-ip6: yes
+    # ------------------------------------------------------------
+    # Access control
+    # ------------------------------------------------------------
+    access-control: 127.0.0.1/32 allow
+    access-control: ::1/128 allow
+    #access-control: 127.0.0.0/8 allow
+    #access-control: 10.89.0.0/16 allow
+    #access-control: 2a01:8b81:4800:9c00::/64 allow
+    #access-control: 100.64.0.0/10 allow     # Tailscale
+    #access-control: 10.1.0.0/24 allow       # wg1
+    #access-control: 10.3.0.0/24 allow       # wg3
+    #access-control: 10.5.0.0/24 allow       # wg5
+    #access-control: 10.7.0.0/24 allow       # wg7
+    #access-control: fd10:4::/64 allow       # wg4 IPv6
+    #access-control: fd10:5::/64 allow       # wg5 IPv6
+    #access-control: fd10:6::/64 allow       # wg6 IPv6
+    #access-control: fd10:7::/64 allow       # wg7 IPv6
 
-	# ------------------------------------------------------------
-	# Access control
-	# ------------------------------------------------------------
-	access-control: 127.0.0.1/32 allow
-	access-control: ::1/128 allow
-	access-control: 127.0.0.0/8 allow
-	access-control: 10.89.0.0/16 allow
-	access-control: 2a01:8b81:4800:9c00::/64 allow
-	access-control: 100.64.0.0/10 allow     # Tailscale
-	access-control: 10.1.0.0/24 allow       # wg1
-	access-control: 10.3.0.0/24 allow       # wg3
-	access-control: 10.5.0.0/24 allow       # wg5
-	access-control: 10.7.0.0/24 allow       # wg7
-	access-control: fd10:4::/64 allow       # wg4 IPv6
-	access-control: fd10:5::/64 allow       # wg5 IPv6
-	access-control: fd10:6::/64 allow       # wg6 IPv6
-	access-control: fd10:7::/64 allow       # wg7 IPv6
+    # ------------------------------------------------------------
+    # Performance tuning
+    # ------------------------------------------------------------
+    num-threads: 5
+    msg-cache-slabs: 8
+    rrset-cache-slabs: 8
+    infra-cache-slabs: 8
+    key-cache-slabs: 8
 
-	# ------------------------------------------------------------
-	# Performance tuning
-	# ------------------------------------------------------------
-	num-threads: 5
-	msg-cache-slabs: 8
-	rrset-cache-slabs: 8
-	infra-cache-slabs: 8
-	key-cache-slabs: 8
+    msg-cache-size: 256m
+    rrset-cache-size: 512m
+    key-cache-size: 128m
+    neg-cache-size: 4m
 
-	msg-cache-size: 256m
-	rrset-cache-size: 512m
-	key-cache-size: 128m
-	neg-cache-size: 4m
+    prefetch: yes
+    prefetch-key: yes
+    outgoing-range: 4096
+    num-queries-per-thread: 8192
+    serve-expired: yes
 
-	prefetch: yes
-	prefetch-key: yes
-	outgoing-range: 4096
-	num-queries-per-thread: 8192
-	serve-expired: yes
+    so-reuseport: yes
+    so-rcvbuf: 8m
+    so-sndbuf: 8m
 
-	so-reuseport: yes
-	so-rcvbuf: 8m
-	so-sndbuf: 8m
+    hide-identity: yes
+    hide-version: yes
+    qname-minimisation: yes
 
-	hide-identity: yes
-	hide-version: yes
-	qname-minimisation: yes
-
-	verbosity: 2
+    verbosity: 2
 
 # ------------------------------------------------------------
 # Authoritative-only resolution for bardi.ch
 # ------------------------------------------------------------
 stub-zone:
-	name: "bardi.ch."
-	stub-host: ns11.infomaniak.ch
-	stub-host: ns12.infomaniak.ch
+    name: "bardi.ch."
+    stub-host: ns11.infomaniak.ch
+    stub-host: ns12.infomaniak.ch
 
 # ------------------------------------------------------------
 # Recursive forwarding
 # ------------------------------------------------------------
 forward-zone:
-	name: "."
+    name: "."
 
-	# Cloudflare
-	forward-addr: 1.1.1.1
-	forward-addr: 1.0.0.1
-	forward-addr: 2606:4700:4700::1111
-	forward-addr: 2606:4700:4700::1001
+    # Cloudflare
+    forward-addr: 1.1.1.1
+    forward-addr: 1.0.0.1
+    forward-addr: 2606:4700:4700::1111
+    forward-addr: 2606:4700:4700::1001
 
-	# Quad9
-	forward-addr: 9.9.9.9
-	forward-addr: 149.112.112.112
-	forward-addr: 2620:fe::fe
-	forward-addr: 2620:fe::9
+    # Quad9
+    forward-addr: 9.9.9.9
+    forward-addr: 149.112.112.112
+    forward-addr: 2620:fe::fe
+    forward-addr: 2620:fe::9
 
-	# Digitale Gesellschaft (CH)
-	forward-addr: 185.95.218.42
-	forward-addr: 185.95.218.43
+    # Digitale Gesellschaft (CH)
+    forward-addr: 185.95.218.42
+    forward-addr: 185.95.218.43
 
 # ------------------------------------------------------------
 # Remote control
 # ------------------------------------------------------------
 remote-control:
-	control-enable: yes
-	control-interface: /run/unbound.ctl
-	server-key-file: /etc/unbound/unbound_server.key
-	server-cert-file: /etc/unbound/unbound_server.pem
-	control-key-file: /etc/unbound/unbound_control.key
-	control-cert-file: /etc/unbound/unbound_control.pem
+    control-enable: yes
+    control-interface: /run/unbound.ctl
+    server-key-file: /etc/unbound/unbound_server.key
+    server-cert-file: /etc/unbound/unbound_server.pem
+    control-key-file: /etc/unbound/unbound_control.key
+    control-cert-file: /etc/unbound/unbound_control.pem
