--- a/config/dnsdist/dnsdist.conf
+++ b/config/dnsdist/dnsdist.conf
@@ -1,34 +1,67 @@
 -- ------------------------------------------------------------
--- dnsdist: DNS over HTTPS backend (Caddy terminates TLS)
+-- dnsdist: DNS over HTTPS backend
+-- Recursive DNS for all VPN interfaces
+-- LAN access enforced separately (nftables)
 -- ------------------------------------------------------------
 
--- DNS over HTTPS listener (loopback only)
-addDOHLocal(
-  "127.0.0.1:8443",
-  "/etc/dnsdist/certs/fullchain.pem",
-  "/etc/dnsdist/certs/privkey.pem",
-  { "/dns-query" }
-)
+local cert = "/etc/dnsdist/certs/fullchain.pem"
+local key  = "/etc/dnsdist/certs/privkey.pem"
 
-addDOHLocal(
-  "[::1]:8443",
-  "/etc/dnsdist/certs/fullchain.pem",
-  "/etc/dnsdist/certs/privkey.pem",
-  { "/dns-query" }
-)
+-- ------------------------------------------------------------
+-- DoH listeners (loopback)
+-- ------------------------------------------------------------
+addDOHLocal("127.0.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("[::1]:8443",    cert, key, { "/dns-query" })
 
--- Forward all DNS queries to Unbound
+-- ------------------------------------------------------------
+-- DoH listeners (WireGuard wg0–wg7)
+-- ------------------------------------------------------------
+
+-- IPv4
+addDOHLocal("10.0.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.1.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.2.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.3.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.4.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.5.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.6.0.1:8443", cert, key, { "/dns-query" })
+addDOHLocal("10.7.0.1:8443", cert, key, { "/dns-query" })
+
+-- IPv6
+addDOHLocal("[2a01:8b81:4800:9c00:10::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:11::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:12::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:13::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:14::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:15::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:16::1]:8443", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:17::1]:8443", cert, key, { "/dns-query" })
+
+-- ------------------------------------------------------------
+-- Backend: Unbound (loopback only)
+-- ------------------------------------------------------------
 newServer({
   address = "127.0.0.1:5335",
   name = "unbound"
 })
 
--- ACL is now effectively irrelevant, but harmless
+-- ------------------------------------------------------------
+-- ACL: allow loopback + all WireGuard clients
+-- (LAN access is NOT implied here)
+-- ------------------------------------------------------------
 setACL({
   "127.0.0.0/8",
-  "::1/128"
+  "::1/128",
+
+  -- WireGuard IPv4
+  "10.0.0.0/8",
+
+  -- WireGuard IPv6
+  "2a01:8b81:4800:9c00::/64"
 })
 
+-- ------------------------------------------------------------
 -- Conservative safety defaults
+-- ------------------------------------------------------------
 setMaxUDPOutstanding(4096)
 setMaxTCPClientThreads(100)
