Enable full dual-stack WireGuard routing; unify IPv6 prefixes; rebuild nftables + dnsmasq integration
Summary of changes:
Add 10.89.12.1/firewall-start to ensure clean nftables bootstrap on boot

Update dnsmasq listener config + mk rules to advertise correct WG IPv6 /64s

Align scripts/firewall-nft.sh with new dual-stack model (clean IPv6 forwarding, no NAT66)

Update scripts/gen-client.sh to allocate deterministic IPv6 addresses matching dnsmasq + router

Rewrite scripts/setup-subnet-router.nft.sh to be self-contained:

hardcoded WG IPv4/IPv6 subnets

bitmask-driven LAN/IPv4/IPv6 policy

legacy rule cleanup

ndppd config + kernel route enforcement

vendor-safe nftables persistence

Result
A fully consistent, reproducible dual-stack WireGuard architecture with clean routing, deterministic addressing, and idempotent nftables state.

--- a/config/dnsmasq/99-homelab-listen.conf
+++ b/config/dnsmasq/99-homelab-listen.conf
@@ -1,19 +1,20 @@
 # 99-homelab-listen.conf
 #
-# DNS frontend for VPN and local clients
+# DNS + IPv6 RA frontend for VPN and local clients
 # Forwards to local Unbound resolver with DNSSEC validation
+# Provides IPv6 Router Advertisements for all WireGuard interfaces
+
+# Disable DHCP lease storage (Ugreen OS has no /var/lib/misc)
+dhcp-leasefile=/dev/null
 
 # ------------------------------------------------------------
 # Listening addresses (explicit and deterministic)
 # ------------------------------------------------------------
 
-# Loopback (local system)
-listen-address=127.0.0.1
+# Let Ugreen dnsmasq listen on all IPv4 interfaces (default behavior)
+# Do NOT specify listen-address=0.0.0.0 — Ugreen already binds it internally.
 
-# WireGuard / VPN IPv4
-listen-address=10.89.12.4
-
-# Router-delegated stable IPv6
+# Explicit IPv6 listener (LAN only)
 listen-address=2a01:8b81:4800:9c00::4
 
 # Enforce interface binding
@@ -44,3 +45,77 @@ no-poll
 
 # Do not cache negative answers excessively
 neg-ttl=60
+
+# ------------------------------------------------------------
+# IPv6 Router Advertisements for all WireGuard interfaces
+# ------------------------------------------------------------
+# Each wgX interface gets its own /64 from the delegated /56
+# Clients receive:
+#   - IPv6 address
+#   - Default gateway (::1 on wgX)
+#   - DNS server (::1 on wgX)
+#   - Prefix lifetime + RA parameters
+
+# -------------------------
+# wg0 → 2a01:8b81:4800:9c01::/64
+# -------------------------
+interface=wg0
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg0,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c01::1]
+
+# -------------------------
+# wg1 → 2a01:8b81:4800:9c02::/64
+# -------------------------
+interface=wg1
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg1,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c02::1]
+
+# -------------------------
+# wg2 → 2a01:8b81:4800:9c03::/64
+# -------------------------
+interface=wg2
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg2,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c03::1]
+
+# -------------------------
+# wg3 → 2a01:8b81:4800:9c04::/64
+# -------------------------
+interface=wg3
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg3,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c04::1]
+
+# -------------------------
+# wg4 → 2a01:8b81:4800:9c05::/64
+# -------------------------
+interface=wg4
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg4,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c05::1]
+
+# -------------------------
+# wg5 → 2a01:8b81:4800:9c06::/64
+# -------------------------
+interface=wg5
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg5,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c06::1]
+
+# -------------------------
+# wg6 → 2a01:8b81:4800:9c07::/64
+# -------------------------
+interface=wg6
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg6,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c07::1]
+
+# -------------------------
+# wg7 → 2a01:8b81:4800:9c08::/64
+# -------------------------
+interface=wg7
+enable-ra
+dhcp-range=::100,::1ff,constructor:wg7,ra-names,64
+dhcp-option=option6:dns-server,[2a01:8b81:4800:9c08::1]
