dnsmasq: bind IPv6 listener to ::1 to avoid prefix-rotation crashes
- Replaced static global IPv6 listen-address with ::1
- Prevents dnsmasq from failing when the ISP rotates the delegated /56
- Ensures stable, prefix-agnostic DNS frontend behavior
- Keeps IPv6 RAs on wg0–wg7 fully functional

--- a/config/dnsmasq/99-homelab-listen.conf
+++ b/config/dnsmasq/99-homelab-listen.conf
@@ -14,8 +14,22 @@ dhcp-leasefile=/dev/null
 # Let Ugreen dnsmasq listen on all IPv4 interfaces (default behavior)
 # Do NOT specify listen-address=0.0.0.0 — Ugreen already binds it internally.
 
-# Explicit IPv6 listener (LAN only)
-listen-address=2a01:8b81:4800:9c00::4
+# Explicit IPv6 listener (safe and prefix‑agnostic)
+#
+# We bind dnsmasq only to ::1 for IPv6 because:
+#   - Global IPv6 addresses on eth0 are dynamic (SLAAC + privacy extensions)
+#   - The ISP‑delegated /56 prefix can change at any reboot or router update
+#   - dnsmasq *fails hard* if a configured listen-address does not exist
+#   - Binding to ::1 guarantees a stable, always-present IPv6 endpoint
+#
+# dnsmasq will still:
+#   - Listen on all IPv4 interfaces (default Ugreen behavior)
+#   - Serve IPv6 Router Advertisements on wg0–wg7 via interface=wgX
+#   - Advertise per‑wgX DNS servers (::1 on each wgX)
+#
+# Never bind dnsmasq to a global IPv6 (e.g., 2a01:8b81:4800:9c00::4)
+# unless the router supports static DHCPv6 reservations — most do not.
+listen-address=::1
 
 # Enforce interface binding
 bind-interfaces
