dnsmasq: make IPv6 RA fully prefix‑agnostic
- Replaced all hard‑coded IPv6 dns-server addresses with [::1]
- Ensures dnsmasq derives the correct prefix per wgX via constructor:wgX
- Eliminates breakage when the ISP rotates the delegated /56
- Keeps RA, DHCPv6, and DNS behavior stable across prefix changes

--- a/config/dnsmasq/99-homelab-listen.conf
+++ b/config/dnsmasq/99-homelab-listen.conf
@@ -76,7 +76,7 @@ neg-ttl=60
 interface=wg0
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg0,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c01::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg1 → 2a01:8b81:4800:9c02::/64
@@ -84,7 +84,7 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c01::1]
 interface=wg1
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg1,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c02::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg2 → 2a01:8b81:4800:9c03::/64
@@ -92,7 +92,7 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c02::1]
 interface=wg2
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg2,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c03::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg3 → 2a01:8b81:4800:9c04::/64
@@ -100,7 +100,7 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c03::1]
 interface=wg3
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg3,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c04::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg4 → 2a01:8b81:4800:9c05::/64
@@ -108,7 +108,7 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c04::1]
 interface=wg4
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg4,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c05::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg5 → 2a01:8b81:4800:9c06::/64
@@ -116,7 +116,7 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c05::1]
 interface=wg5
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg5,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c06::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg6 → 2a01:8b81:4800:9c07::/64
@@ -124,7 +124,7 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c06::1]
 interface=wg6
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg6,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c07::1]
+dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
 # wg7 → 2a01:8b81:4800:9c08::/64
@@ -132,4 +132,4 @@ dhcp-option=option6:dns-server,[2a01:8b81:4800:9c07::1]
 interface=wg7
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg7,ra-names,64
-dhcp-option=option6:dns-server,[2a01:8b81:4800:9c08::1]
+dhcp-option=option6:dns-server,[::1]
