dnsmasq: use interface-name=wgX,* and wire deploy-dnsmasq-config into deps
- Replace interface=wgX with interface-name=wgX,* in 99-homelab-listen.conf
  to prevent dnsmasq from failing at startup when WireGuard interfaces are
  not yet created. No other config changes made.

- Update mk/20_deps.mk to include deploy-dnsmasq-config in the deps chain so
  the homelab dnsmasq fragment is deployed and validated during make deps.

- Improve mk/50_dnsmasq.mk with restart/status logic that surfaces dnsmasq
  failures cleanly and aborts the build when the service cannot start.

--- a/config/dnsmasq/99-homelab-listen.conf
+++ b/config/dnsmasq/99-homelab-listen.conf
@@ -73,7 +73,7 @@ neg-ttl=60
 # -------------------------
 # wg0 → 2a01:8b81:4800:9c01::/64
 # -------------------------
-interface=wg0
+interface-name=wg0,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg0,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -81,7 +81,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg1 → 2a01:8b81:4800:9c02::/64
 # -------------------------
-interface=wg1
+interface-name=wg1,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg1,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -89,7 +89,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg2 → 2a01:8b81:4800:9c03::/64
 # -------------------------
-interface=wg2
+interface-name=wg2,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg2,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -97,7 +97,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg3 → 2a01:8b81:4800:9c04::/64
 # -------------------------
-interface=wg3
+interface-name=wg3,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg3,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -105,7 +105,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg4 → 2a01:8b81:4800:9c05::/64
 # -------------------------
-interface=wg4
+interface-name=wg4,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg4,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -113,7 +113,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg5 → 2a01:8b81:4800:9c06::/64
 # -------------------------
-interface=wg5
+interface-name=wg5,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg5,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -121,7 +121,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg6 → 2a01:8b81:4800:9c07::/64
 # -------------------------
-interface=wg6
+interface-name=wg6,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg6,ra-names,64
 dhcp-option=option6:dns-server,[::1]
@@ -129,7 +129,7 @@ dhcp-option=option6:dns-server,[::1]
 # -------------------------
 # wg7 → 2a01:8b81:4800:9c08::/64
 # -------------------------
-interface=wg7
+interface-name=wg7,*
 enable-ra
 dhcp-range=::100,::1ff,constructor:wg7,ra-names,64
 dhcp-option=option6:dns-server,[::1]
