caddy: add deploy-caddy dependency and drop port 80 listener
- Ensure Caddy always receives fresh ECC certs by wiring deploy-caddy
  into the caddy target (issue → prepare → deploy → reload).
- Remove the :80 HTTP listener from the Caddyfile to avoid port
  conflicts with UGOS nginx, which owns port 80 for the vendor UI.
- Caddy now serves only on :443, using the deployed ECC certs from
  /etc/ssl/caddy/, and no longer interferes with UGOS UI on port 9999.
- No changes to routing logic; HTTPS entrypoint remains intact.

--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -32,10 +32,7 @@
 #        wg7 → udp://vpn.bardi.ch:51427
 # ------------------------------------------------------------
 
-# HTTP port for Let's Encrypt renewal
-bardi.ch:80 {
-	reverse_proxy 10.89.12.2:80
-}
+# UGOS nginx is using port 80 for UGOS UI
 
 # Syncthing GUI
 bardi.ch:8384 {
