dns: tune forwarding path and add async dns-warm implementation
- Tune dnsmasq forwarding behavior and listen configuration
- Refine unbound resolver settings for latency and concurrency
- Introduce async dns-warm helper and C implementation
- Wire async warm path into Makefile targets
- Update dns-warm rotation script to support new mode

--- a/config/dnsmasq/99-homelab-listen.conf
+++ b/config/dnsmasq/99-homelab-listen.conf
@@ -1,4 +1,6 @@
 # 99-homelab-listen.conf
+# to deploy, use 
+#   make deploy-dnsmasq-config
 #
 # DNS + IPv6 RA frontend for VPN and local clients
 # Forwards to local Unbound resolver with DNSSEC validation
