--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -87,24 +87,24 @@ stub-zone:
 # ------------------------------------------------------------
 # Recursive forwarding
 # ------------------------------------------------------------
-forward-zone:
-    name: "."
-
-    # Cloudflare
-    forward-addr: 1.1.1.1
-    forward-addr: 1.0.0.1
-    forward-addr: 2606:4700:4700::1111
-    forward-addr: 2606:4700:4700::1001
-
-    # Quad9
-    forward-addr: 9.9.9.9
-    forward-addr: 149.112.112.112
-    forward-addr: 2620:fe::fe
-    forward-addr: 2620:fe::9
-
-    # Digitale Gesellschaft (CH)
-    forward-addr: 185.95.218.42
-    forward-addr: 185.95.218.43
+# forward-zone:
+#     name: "."
+#
+#     # Cloudflare
+#     forward-addr: 1.1.1.1
+#     forward-addr: 1.0.0.1
+#     forward-addr: 2606:4700:4700::1111
+#     forward-addr: 2606:4700:4700::1001
+#
+#     # Quad9
+#     forward-addr: 9.9.9.9
+#     forward-addr: 149.112.112.112
+#     forward-addr: 2620:fe::fe
+#     forward-addr: 2620:fe::9
+#
+#     # Digitale Gesellschaft (CH)
+#     forward-addr: 185.95.218.42
+#     forward-addr: 185.95.218.43
 
 # ------------------------------------------------------------
 # Remote control
