Refactor Headscale/Tailscale orchestration and role-based enrollment
- Split Headscale control plane into explicit namespaces, users, and ACL layers
- Introduce headscale-stack aggregator for deterministic control-plane setup
- Replace legacy tailscaled-family with role-based tailscaled-lan service
- Add dedicated tailscaled client management with safe, ephemeral enrollment
- Integrate Headscale/Tailscale into gen0 foundational orchestration
- Update setup scripts and systemd units to match new architecture

--- a/config/systemd/tailscaled-lan.service
+++ b/config/systemd/tailscaled-lan.service
@@ -1,6 +1,6 @@
-# tailscaled-family.service
+# tailscaled-lan.service
 [Unit]
-Description=Tailscale family role (exit node + LAN route)
+Description=Tailscale lan role (exit node + LAN route)
 After=network-online.target tailscaled.service
 Wants=network-online.target
 Requires=tailscaled.service
