Enable IPv6 routing for Tailscale/Headscale and clean up related config
- Add IPv6 LAN + Internet forwarding rules to setup-subnet-router.nft.sh
  (TS -> LAN v6, LAN -> TS v6, TS -> inet v6)
- Update tailscaled.mk and headscale user config to align with IPv6 routing
- Remove obsolete headscale namespaces mk file
- Refresh Caddyfile and unbound mk for consistent IPv6-aware service layout
- Minor Makefile adjustments for router deployment and service ordering

--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -106,11 +106,7 @@ bardi.ch:8384 {
 	}
 	reverse_proxy @vpn 127.0.0.1:8910 {
 		header_up Host vpn.bardi.ch
-		transport http {
-			versions h2c
-			keepalive 5s
-		}
-		flush_interval 1s
+		header_up X-Forwarded-Proto https
 	}
 
 	# DERP relay (external)
