--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -172,8 +172,65 @@ bardi.ch:8384 {
 		header_up Host dev.bardi.ch
 	}
 
+	# apt-cacher-ng (internal only)
+	@apt_internal {
+		host apt.bardi.ch
+
+		# LAN IPv4 + IPv6
+		remote_ip 10.89.12.0/24
+		remote_ip 2a01:8b81:4800:9c00::/64
+
+		# WireGuard IPv4 subnets (wg0–wg7)
+		remote_ip 10.0.0.0/24
+		remote_ip 10.1.0.0/24
+		remote_ip 10.2.0.0/24
+		remote_ip 10.3.0.0/24
+		remote_ip 10.4.0.0/24
+		remote_ip 10.5.0.0/24
+		remote_ip 10.6.0.0/24
+		remote_ip 10.7.0.0/24
+
+		# WireGuard IPv6 /128s
+		remote_ip 2a01:8b81:4800:9c00:10::1/128
+		remote_ip 2a01:8b81:4800:9c00:11::1/128
+		remote_ip 2a01:8b81:4800:9c00:12::1/128
+		remote_ip 2a01:8b81:4800:9c00:13::1/128
+		remote_ip 2a01:8b81:4800:9c00:14::1/128
+		remote_ip 2a01:8b81:4800:9c00:15::1/128
+		remote_ip 2a01:8b81:4800:9c00:16::1/128
+		remote_ip 2a01:8b81:4800:9c00:17::1/128
+
+		# Tailscale CGNAT range
+		remote_ip 100.64.0.0/10
+	}
+
+	handle @apt_internal {
+		reverse_proxy 10.89.12.4:3142 {
+			header_up Host apt.bardi.ch
+
+			# Health checking: fail fast if apt-cacher-ng is down
+			health_uri /acng-report.html
+			health_interval 10s
+			health_timeout 2s
+			fail_duration 30s
+		}
+
+		# Explicit failure when backend is unhealthy
+		respond "APT cache temporarily unavailable" 503
+	}
+
 	# Unknown host fallback
-	@unknown not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.bardi.ch qnap.bardi.ch nas.bardi.ch dev.bardi.ch
+	@unknown not host \
+	bardi.ch \
+	router.bardi.ch \
+	dns.bardi.ch \
+	vpn.bardi.ch \
+	derp.bardi.ch \
+	qnap.bardi.ch \
+	nas.bardi.ch \
+	dev.bardi.ch \
+	apt.bardi.ch
+
 	respond @unknown "Not Found" 404
 
 	# log disabled to avoid disk spin
