network: enforce IPv4/IPv6 invariants and harden WireGuard lifecycle
- Eliminate legacy /24 WireGuard NAT assumptions; enforce /16 contract
- Add read-only network invariant checks (IPv4 + IPv6)
- Encode absence checks to prevent legacy drift
- Clarify NAS vs router IPv6 responsibilities
- Refactor WireGuard tooling for deterministic runtime recovery
- Remove deprecated scripts and consolidate lifecycle helpers
- Ignore generated WireGuard artifacts to prevent secret leakage

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ __pycache__/
 # Future site/dashboard build artifacts
 gen2/site/node_modules/
 gen2/site/dist/
+
+# Wireguard runtime artifacts (secrets)
+/out/
