infra: harden network stack, unify runtime guards, and snapshot nft policy This commit consolidates and hardens the network control plane:
- Refactors nftables subnet router logic to be fully idempotent, canonical,
  and migration-safe (explicit legacy cleanup + deterministic convergence).
- Introduces unconditional nft inet filter snapshots for passive auditability
  and clean git diffs.
- Splits DNS setup into explicit runtime guard semantics (dns-runtime-guard),
  retiring implicit orchestration.
- Tightens WireGuard planning, compilation, and client export paths.
- Adds config validation stages and clarifies Makefile orchestration boundaries
  across DNS, WireGuard, and tailscaled roles.

No functional behavior is hidden behind flags; all changes are explicit,
auditable, and reproducible.

--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -1,4 +1,30 @@
 # ------------------------------------------------------------
+# NOTE: UGOS LOOPBACK ISOLATION (IMPORTANT)
+#
+# On UGOS-based systems (Ugreen / NAS-class OS), TCP connections
+# over 127.0.0.1 between system services are NOT reliable.
+#
+# Observed behavior:
+#   - Some loopback services work (e.g. HTTPS DoH backends)
+#   - Others silently blackhole (e.g. plain HTTP control APIs)
+#   - ss/netstat may show LISTEN, but connections hang
+#   - Reverse proxies report "dial tcp 127.0.0.1:<port>: i/o timeout"
+#
+# This appears to depend on:
+#   - protocol (HTTPS vs HTTP)
+#   - service class (network service vs system daemon)
+#   - connection lifetime (short vs long-lived)
+#
+# Rule:
+#   DO NOT rely on 127.0.0.1 for inter-service proxying on UGOS.
+#
+# Correct pattern:
+#   - Bind backend services to the LAN IP (e.g. 10.89.12.4)
+#   - Proxy to the LAN IP, even on the same host
+#
+# This avoids silent blackholes, reload hangs, and false 502s.
+# ------------------------------------------------------------
+# ------------------------------------------------------------
 # SAFETY:
 # This Caddyfile MUST NOT bind to :80 or :443.
 # UGOS nginx requires those ports and will fail hard otherwise.
@@ -104,14 +130,14 @@ bardi.ch:8384 {
 	@vpn {
 		host vpn.bardi.ch
 	}
-	reverse_proxy @vpn 127.0.0.1:8910 {
+	reverse_proxy @vpn 10.89.12.4:8910 {
 		header_up Host vpn.bardi.ch
 		header_up X-Forwarded-Proto https
 	}
 
 	# DERP relay (external)
 	@derp host derp.bardi.ch
-	reverse_proxy @derp 127.0.0.1:8912
+	reverse_proxy @derp 10.89.12.4:8912
 
 	# QNAP (internal only)
 	@qnap_internal {
