--- a/config/dnsdist/dnsdist.conf
+++ b/config/dnsdist/dnsdist.conf
@@ -14,7 +14,7 @@ addDOHLocal("127.0.0.1:8053", cert, key, { "/dns-query" })
 addDOHLocal("[::1]:8053",    cert, key, { "/dns-query" })
 
 -- ------------------------------------------------------------
--- DoH listeners (WireGuard wg0–wg7)
+-- DoH listeners (WireGuard wg0–wg15)
 -- ------------------------------------------------------------
 
 -- IPv4
@@ -26,23 +26,41 @@ addDOHLocal("10.4.0.1:8053", cert, key, { "/dns-query" })
 addDOHLocal("10.5.0.1:8053", cert, key, { "/dns-query" })
 addDOHLocal("10.6.0.1:8053", cert, key, { "/dns-query" })
 addDOHLocal("10.7.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.8.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.9.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.10.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.11.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.12.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.13.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.14.0.1:8053", cert, key, { "/dns-query" })
+addDOHLocal("10.15.0.1:8053", cert, key, { "/dns-query" })
+
 
 -- IPv6
-addDOHLocal("[2a01:8b81:4800:9c00:10::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:11::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:12::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:13::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:14::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:15::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:16::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:17::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:0:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:1:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:2:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:3:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:4:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:5:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:6:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:7:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:8:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:9:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:10:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:11:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:12:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:13:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:14:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[2a01:8b81:4800:9c00:15:0::1]:8053", cert, key, { "/dns-query" })
 
 -- ------------------------------------------------------------
--- Backend: Unbound (loopback only)
+-- Backend: Unbound (loopback only, no check since recursive)
 -- ------------------------------------------------------------
 newServer({
   address = "127.0.0.1:5335",
-  name = "unbound"
+  name = "unbound",
+  checkType = "none"
 })
 
 -- ------------------------------------------------------------
