--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -11,6 +11,11 @@
 server:
     interface: 127.0.0.1
     interface: ::1
+
+    # Allow Unbound to send queries out via any interface
+    outgoing-interface: 0.0.0.0
+    outgoing-interface: ::
+    
     port: 5335
     do-ip6: yes
     prefer-ip6: yes
@@ -33,7 +38,7 @@ server:
     # ------------------------------------------------------------
     access-control: 127.0.0.1/32 allow
     access-control: ::1/128 allow
-    #access-control: 127.0.0.0/8 allow
+    access-control: 127.0.0.0/8 allow        # dnsdist
     #access-control: 10.89.0.0/16 allow
     #access-control: 2a01:8b81:4800:9c00::/64 allow
     #access-control: 100.64.0.0/10 allow     # Tailscale
@@ -88,23 +93,23 @@ stub-zone:
 # Recursive forwarding
 # ------------------------------------------------------------
 # forward-zone:
-#     name: "."
+#    name: "."
 #
-#     # Cloudflare
-#     forward-addr: 1.1.1.1
-#     forward-addr: 1.0.0.1
-#     forward-addr: 2606:4700:4700::1111
-#     forward-addr: 2606:4700:4700::1001
+#    # Cloudflare
+#    forward-addr: 1.1.1.1
+#    forward-addr: 1.0.0.1
+#    forward-addr: 2606:4700:4700::1111
+#    forward-addr: 2606:4700:4700::1001
 #
-#     # Quad9
-#     forward-addr: 9.9.9.9
-#     forward-addr: 149.112.112.112
-#     forward-addr: 2620:fe::fe
-#     forward-addr: 2620:fe::9
+#    # Quad9
+#    forward-addr: 9.9.9.9
+#    forward-addr: 149.112.112.112
+#    forward-addr: 2620:fe::fe
+#    forward-addr: 2620:fe::9
 #
-#     # Digitale Gesellschaft (CH)
-#     forward-addr: 185.95.218.42
-#     forward-addr: 185.95.218.43
+#    # Digitale Gesellschaft (CH)
+#    forward-addr: 185.95.218.42
+#    forward-addr: 185.95.218.43
 
 # ------------------------------------------------------------
 # Remote control
