Enforce run‑as‑root contract across Makefiles; migrate Headscale to systemd; remove legacy setup script
Summary

Standardized privileged‑operation handling by adding ensure-run-as-root to all Make targets invoking $(run_as_root)

Cleaned up inconsistent privilege paths and removed silent‑failure edges

Introduced proper systemd units for Headscale and dropped the legacy installer script

Updated configs and ACLs to match the new deployment model

Details

Headscale

Added config/systemd/headscale.service and override drop‑in

Updated headscale.yaml and ACL JSON

Removed obsolete scripts/setup/setup_headscale.sh

Updated Make targets in mk/81_headscale.mk and mk/84_headscale-acls.mk

Privilege contract enforcement

Added ensure-run-as-root to all Make targets that call $(run_as_root)

Corrected missing guards in:
mk/20_deps.mk, mk/30_generate.mk, mk/40_acme.mk,
mk/40_caddy.mk, mk/40_wireguard.mk,
mk/41_wireguard-status.mk, mk/43_wireguard-runtime.mk

Left sudo‑based or read‑only targets intentionally unguarded

WireGuard pipeline

Synced bootstrap, compile, deploy, status, and runtime Makefiles

Ensured deterministic ordering and atomic deploy semantics

Updated net‑tunnel and prereq logic

Groups & prereqs

Hardened group enforcement logic

Updated prereq checks and dependency hygiene

--- a/config/headscale.yaml
+++ b/config/headscale.yaml
@@ -75,6 +75,9 @@ database:
     write_ahead_log: true
     wal_autocheckpoint: 1000
 
+policy:
+  path: /etc/headscale/acl.json
+
 # acme_url: https://acme-v02.api.letsencrypt.org/directory
 # acme_email: ""
 # tls_letsencrypt_hostname: ""
