Retire Attic integration and move all components to legacy/
- Remove Attic from active build pipeline and Makefile
- Archive all Attic scripts, configs, and systemd units under mk/legacy/attic/
- Disable old cargo-based client build (20_attic-client-cargo.mk.disabled)
- Add install-attic-client-nix.sh for completeness during transition
- Preserve attic-test.token for reference during cleanup
- Update README-attic.md to reflect deprecation

This commit fully retires Attic from the homelab while keeping all artifacts
accessible under mk/legacy/ for historical reference.

--- a/mk/legacy/attic/config.toml
+++ b/mk/legacy/attic/config.toml
@@ -6,7 +6,7 @@
 listen = "0.0.0.0:8082"
 
 # Hosts allowed to access the server
-# do not add "::/0" as this exposes Attic globally if IPv6 routing exists
+# (uncomment and adjust when you want to lock it down)
 allowed-hosts = [
   "127.0.0.1",
   "::1",
@@ -27,13 +27,8 @@ substituter-endpoint = "http://nas:8082"
 # Security & protocol behavior
 # ------------------------------------------------------------
 
-# Allow soft deletion of caches (recommended for GC safety)
 soft-delete-caches = true
-
-# Require proof‑of‑possession for uploads (recommended)
 require-proof-of-possession = true
-
-# Maximum allowed narinfo size (integer as bytes)
 max-nar-info-size = 8388608
 
 # ------------------------------------------------------------
